force-app/main/default/objects/Account/fields/CPAvgDaysPastDue__c.field-meta.xml
<CustomField>
    <fullName>CPAvgDaysPastDue__c</fullName>
    <label>CPAvgDaysPastDue</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>