force-app/main/default/objects/Account/fields/CPCurrentDueAmount__c.field-meta.xml
<CustomField>
    <fullName>CPCurrentDueAmount__c</fullName>
    <label>CPCurrentDueAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>