force-app/main/default/objects/Account/fields/CPInitialDueAmount__c.field-meta.xml
<CustomField>
    <fullName>CPInitialDueAmount__c</fullName>
    <label>CPInitialDueAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>