force-app/main/default/objects/Account/fields/CPTotalPaymentsReceived__c.field-meta.xml
<CustomField>
    <fullName>CPTotalPaymentsReceived__c</fullName>
    <label>CPTotalPaymentsReceived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>