force-app/main/default/objects/Account/listViews/Acme_Accounts.listView-meta.xml
<ListView>
    <fullName>Acme_Accounts</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>startsWith</operation>
        <value>Acme</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Core Operating Group</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Fin Services &amp; Structured Finance Group</value>
    </filters>
    <label>Acme Entities</label>
</ListView>